# rs-gles2

./: Cargo.toml  README.md  build.rs
c_code/: wrapper.h
src/: bindings.rs  lib.rs
