[package]
name = "rs-gles2"
version = "0.1.2"
license = "BSD-3-Clause"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
edition = "2018"
description = "OpenGL ES 2 bindings (no dependency on std)"
repository = "https://github.com/NeoCogi/rs-gles2"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
withbindgen = ["bindgen"]

[dependencies]
rs-ctypes = "0.1.1"

[build-dependencies]
cc = { version = "1.0.58", features = ["parallel"] }
bindgen = { version = "0.54.1", optional = true }
