[package]
name = "rs-gles2"
version = "0.1.4"
license = "BSD-3-Clause"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
edition = "2018"
description = "OpenGL ES 2 bindings (no dependency on std)"
repository = "https://github.com/NeoCogi/rs-gles2"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-ctypes = "0.1.1"

[build-dependencies]
cc = { version = "1.0.59", features = ["parallel"] }
bindgen = "0.55.1"
